--- a/assets/lang/ar.json
+++ b/assets/lang/ar.json
@@ -31,16 +31,16 @@
     "Add Moderator":"اضافة ادمن",
     "Skip":"تخطي",
     "Dive into any thing":"اكتشف كل شي",
-    "google sign in":"التسجيل بحساب قوقل"
+    "google sign in":"التسجيل بحساب قوقل",
 
-
-
-
-
-
-
-
-
+    "post deleted successfully":"تم الحذف بنجاح",
+    "link shared successfully":"تم مشاركة الرابط بنجاح",
+    "Image shared successfully":"تم مشاركة الصوره بنجاح",
+    "shared successfully":"تم المشاركة بنجاح",
+    "community created successfully":"تم انشاء المجتمع بنجاح",
+    "user removed from community":"الخروج من المجتمع",
+    "user joined to community":"الانظمام للمجتمع بنجاح",
+    "add moderator successfully":"اضافة ادمن (متحكم) بنجاح"
 
 
 
